# boost_matheval

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  boost_mathevalConfig.cmake.in  conan2file.py  conanfile.py
.github/workflows/: linux.yml  windows.yml
cmake/: Config.cmake  Lib.cmake
coverage/html/: index-sort-f.html  index-sort-l.html  index.html
coverage/html/include/matheval/x3/: index-sort-f.html  index-sort-l.html  index.html  matheval.hpp.func-sort-c.html  matheval.hpp.func.html  matheval.hpp.gcov.html
coverage/html/src/x3/: ast_adapted.hpp.func-sort-c.html  ast_adapted.hpp.func.html  ast_adapted.hpp.gcov.html  evaluator.cpp.func-sort-c.html  evaluator.cpp.func.html  evaluator.cpp.gcov.html  evaluator.hpp.func-sort-c.html  evaluator.hpp.func.html  evaluator.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  math.hpp.func-sort-c.html  math.hpp.func.html  math.hpp.gcov.html  matheval.cpp.func-sort-c.html  matheval.cpp.func.html  matheval.cpp.gcov.html  parser_def.hpp.func-sort-c.html  parser_def.hpp.func.html  parser_def.hpp.gcov.html
coverage/html/unit-tests/: arithmetic.cpp.func-sort-c.html  arithmetic.cpp.func.html  arithmetic.cpp.gcov.html  errors.cpp.func-sort-c.html  errors.cpp.func.html  errors.cpp.gcov.html  functions.cpp.func-sort-c.html  functions.cpp.func.html  functions.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  interface.cpp.func-sort-c.html  interface.cpp.func.html  interface.cpp.gcov.html  literals.cpp.func-sort-c.html  literals.cpp.func.html  literals.cpp.gcov.html  order_of_operations.cpp.func-sort-c.html  order_of_operations.cpp.func.html  order_of_operations.cpp.gcov.html  unary.cpp.func-sort-c.html  unary.cpp.func.html  unary.cpp.gcov.html  variables.cpp.func-sort-c.html  variables.cpp.func.html  variables.cpp.gcov.html
examples/: CMakeLists.txt
src/x3/: CMakeLists.txt
tests/: CMakeLists.txt
unit-tests/: order_of_operations.cpp
